--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        kotlin_version = '1.3.31'
+        coroutines_version = '1.3.0-M1'
+        retrofit_version = '2.6.0'
+        junit_version = '4.12'
+    }
     repositories {
         google()
         jcenter()
