--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         coroutines_version = '1.3.0-M1'
         retrofit_version = '2.6.0'
         junit_version = '4.12'
+        okio_version = '2.2.2'
+        okhttp_version = '3.14.2'
+        retrofit_version = '2.6.0'
+        interceptor_version = '3.10.0'
     }
     repositories {
         google()
