--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         okhttp_version = '3.14.2'
         retrofit_version = '2.6.0'
         interceptor_version = '3.10.0'
+        glide_version = '4.9.0'
     }
     repositories {
         google()
