--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext {
+        dagger_version = '2.23.1'
         kotlin_version = '1.3.31'
         coroutines_version = '1.3.0-M1'
         retrofit_version = '2.6.0'
